1999-09-16  Mikael Djurfeldt  <mdj@mdj-pc.nada.kth.se>

	* Makefile.am (.c.x): Added missing semicolon after `false'.

1999-09-15  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* print.c (scm_iprin1): Turn `write' and `display' into
	primitive generics and use their associated generic functions in
	scm_iprin1 for GOOPS objects.

	* backtrace.c: #include <unistd.h> if present.

1999-09-14  Jim Blandy  <jimb@savonarola.red-bean.com>

	* Makefile.am (.c.x): Don't create a subshell just to delete the
	.x file and return false.
	* Makefile.in: Regenerated.

1999-09-13  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* feature.c (scm_create_hook): New function.  Replaces
	scm_make_named_hook which is now deprecated.
	(scm_make_hook_with_name): New primitive.
	(print_hook): Hooks now print in a fancy way.

1999-09-12  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* __scm.h, backtrace.c, backtrace.h, debug.c, debug.h, dynl-dld.c,
	dynwind.c, dynwind.h, eval.h, evalext.c, evalext.h, feature.c,
	feature.h, hashtab.c, hashtab.h, objects.c, objects.h, print.c,
	procs.c, procs.h, smob.c, smob.h, srcprop.c, strorder.c, struct.c,
	struct.h: Updated copyright notices.

	* srcprop.c (scm_source_property): Bugfix: Use SCM_NECONSP instead
	of SCM_NCONSP.  (Thanks to Greg Badros.)

	* gsubr.c (scm_make_gsubr): Use scm_make_subr_opt for creation of
	the self subr.

	* eval.c, debug.h (SCM_BACKTRACE_WIDTH): New debug option: width.

	* backtrace.c: Keep backtraces within specified width by
	adaptively adjusting fancy printing parameters and cut output if
	necessary.
	(scm_display_application): Check args.

1999-09-11  Jim Blandy  <jimb@savonarola.red-bean.com>

	Change the name of the objects returned by OPENDIR from
	"directory" to "directory stream".  A predicate named "directory?"
	would be confusing.
	* filesys.c (scm_directory_stream_p): Renamed from scm_directory_p.
	At the Scheme level, "directory?" -> "directory-stream?".